clusters/folly/apps/pbx/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pbx
  labels:
    app.kubernetes.io/name: pbx
    app.kubernetes.io/part-of: pbx
